--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <link rel="icon" href=/favicon.ico />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
-<script type="module" crossorigin src="/assets/index.7e0a8d3b.js"></script>
-  <link rel="stylesheet" href="/assets/index.c2910053.css">
+  <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
+<script type="module" crossorigin src="/assets/index.7eff3664.js"></script>
+  <link rel="stylesheet" href="/assets/index.5db5c646.css">
 </head>
 <body>
   <div id="app"></div>
