--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <link rel="icon" href=/favicon.ico />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>canvascat</title>
   <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
-<script type="module" crossorigin src="/assets/index.90d98501.js"></script>
-  <link rel="stylesheet" href="/assets/index.5db5c646.css">
+<script type="module" crossorigin src="/assets/index.ed5fd7e4.js"></script>
+  <link rel="stylesheet" href="/assets/index.6efd6329.css">
 </head>
 <body>
   <div id="app"></div>
