--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href=/favicon.ico />
+  <meta http-equiv="content-language" content="zh-CN" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="supported-color-schemes" content="light dark">
+  <meta name="applicable-device" content="pc,mobile">
+  <link rel="shortcut icon" href="https://avatars1.githubusercontent.com/u/31235016?s=60&v=4" type="image/png">
+  <link rel="apple-touch-icon" href="https://avatars1.githubusercontent.com/u/31235016?s=60&v=4" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>canvascat</title>
-  <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
-<script type="module" crossorigin src="/assets/index.ed5fd7e4.js"></script>
-  <link rel="stylesheet" href="/assets/index.6efd6329.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css"> -->
+<script type="module" crossorigin src="/assets/index.5d45747b.js"></script>
+  <link rel="stylesheet" href="/assets/index.daa9ce07.css">
 </head>
-<body>
-  <div id="app"></div>
-  
-</body>
+<body ondragstart="return false;" id="app"></body>
+
 </html>
